[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Thorn_1/Scripts/Player/Thorn_body.gd" type="Script" id=1]
[ext_resource path="res://Levels/Thorn_1/Assets/Player/Thorn/Asset 1logo7.png" type="Texture" id=2]
[ext_resource path="res://Levels/Thorn_1/Assets/Player/Thorn/Asset 4logo7.png" type="Texture" id=3]
[ext_resource path="res://Levels/Thorn_1/Scenes/Player/Thorn_hammer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Thorn_1/Assets/Player/Thorn_sfx/Asset 2bam_effect.png" type="Texture" id=5]
[ext_resource path="res://Levels/Thorn_1/Sounds/a_thorn_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Levels/Thorn_1/Sounds/a_jump.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.5416

[sub_resource type="Animation" id=2]

resource_name = "Bam_effect"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1.6, 1.6 ), Vector2( 1.8, 1.8 ), Vector2( 1e-005, 1e-005 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Default"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ) ]
}

[node name="Thorn" type="Node2D"]

[node name="Thorn_body" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 231.815, 163.816 )
input_pickable = false
collision_layer = 1
collision_mask = 8
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="Thorn_body" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Thorn_body" index="1"]

build_mode = 0
polygon = PoolVector2Array( 55.1848, 43.1839, -54.8152, 43.1839, -13.8152, -43.8161, 15.1848, -43.8161 )

[node name="Area2D" type="Area2D" parent="Thorn_body" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Thorn_body/Area2D" index="0"]

build_mode = 0
polygon = PoolVector2Array( 55.1848, 43.1839, -54.8152, 43.1839, -13.8152, -43.8161, 15.1848, -43.8161 )

[node name="Thorn_hand_left" type="Area2D" parent="Thorn_body" index="3"]

position = Vector2( -52.1071, -15.21 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="Thorn_body/Thorn_hand_left" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Thorn_body/Thorn_hand_left" index="1"]

shape = SubResource( 1 )

[node name="Thorn_hammer" parent="Thorn_body/Thorn_hand_left" index="2" instance=ExtResource( 4 )]

[node name="Thorn_hand_right" type="Area2D" parent="Thorn_body" index="4"]

editor/display_folded = true
position = Vector2( 46.7426, 13.3171 )
z_index = -1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Z Index" ]

[node name="Sprite" type="Sprite" parent="Thorn_body/Thorn_hand_right" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Thorn_body/Thorn_hand_right" index="1"]

shape = SubResource( 1 )

[node name="SFX" type="Node2D" parent="Thorn_body" index="5"]

pause_mode = 2
position = Vector2( -231.815, -163.816 )
_sections_unfolded = [ "Pause" ]

[node name="Sprite" type="Sprite" parent="Thorn_body/SFX" index="0"]

position = Vector2( 232.279, 166.973 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Thorn_body/SFX" index="1"]

pause_mode = 2
root_node = NodePath("..")
autoplay = "Default"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Bam_effect = SubResource( 2 )
anims/Default = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[node name="Audio_hit" type="AudioStreamPlayer2D" parent="Thorn_body" index="6"]

pause_mode = 2
position = Vector2( -231.815, -163.816 )
stream = ExtResource( 6 )
volume_db = 24.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Pause" ]

[node name="Audio_jump" type="AudioStreamPlayer2D" parent="Thorn_body" index="7"]

position = Vector2( -231.815, -163.816 )
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Timer_invincible" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="timeout" from="Timer_invincible" to="Thorn_body" method="_on_Timer_invincible_timeout"]


